...
            randomNumber = Int(arc4random_uniform(UInt32(self.randomImages.count)))
        }

        currentImageIndex = randomNumber

        if currentImageIndex < 4 {
            randomImageView.accessibilityIdentifier = "pineappleImage"
        } else {
            randomImageView.accessibilityIdentifier = "nahImage"
        }
        
        randomImageView.image = randomImages[randomNumber]
    }
    
    func gameOver() {
...
